--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies" : {
     "inflection" : ">= 1.1.1"
   },
+  "devDependencies" : {
+    "nodeunit" : ">= 0.7.4"
+  },
   "repository" : {
     "type" : "git",
     "url" : "http://github.com/jsantell/swag-mvc"
